deploy/k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend
  namespace: strana-sup
  labels:
    app: sup
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sup
      tier: backend
  template:
    metadata:
      labels:
        app: sup
        tier: backend
    spec:
      volumes:
        - name: host-config
          configMap:
            name: backend-host-config
            defaultMode: 420
        - name: app-files
          emptyDir: {}
      containers:
        - name: app
          image: *image
          envFrom: *env-config
          volumeMounts: &app-vol
            - name: app-files
              mountPath: /app
          resources: {}

        - name: webapp
          image: nginx:alpine
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: app-files
              mountPath: /app
            - name: host-config
              mountPath: /etc/nginx/conf.d
          resources: {}

        - name: worker
          command: [ "sh", "-c", "celery -A conf worker -c 1 -l INFO" ]
          image: *image
          envFrom: *env-config
          volumeMounts: *app-vol
          resources: 
            limits:
              memory: "350Mi"

        - name: scheduler
          command: ["sh", "-c", "celery -A conf beat -l INFO --scheduler django_celery_beat.schedulers:DatabaseScheduler"]
          image: *image
          envFrom: *env-config
          volumeMounts: *app-vol
          resources: {}

      restartPolicy: Always
      terminationGracePeriodSeconds: 30
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 600
