deploy/k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: backend
  namespace: strana-sup
  labels:
    app: sup
    tier: backend
spec:
  selector:
    app: sup
    tier: backend
  ports:
    - name: http
      port: 80
