deploy/k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: web-app
  namespace: strana-sup
  annotations:
    cert-manager.io/cluster-issuer: cert-manager
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: http-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Enter your credentials"
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/client-body-buffer-size: 1M
    nginx.ingress.kubernetes.io/custom-http-errors: 400,403,404,410,418,429,500,503,504
    nginx.ingress.kubernetes.io/default-backend: default/custom-errors-service
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/http2-push-preload: 'true'
    nginx.ingress.kubernetes.io/proxy-buffering: 'on'
spec:
  tls:
    - hosts:
        - sup.strana.t.crtweb.ru
      secretName: tls
  rules:
    - host: sup.strana.t.crtweb.ru
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  name: http
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /admin
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /static
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /media
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  name: http
          - path: /swagger
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  name: http
